[package]
name = "genlink"
version = "0.2.0"
description = "General interface for linkers."
authors = ["Potf <potfman@gmail.com>"]
homepage = "https://github.com/p0tf/genlink"
repository = "https://github.com/p0tf/genlink"
keywords = ["link", "linker", "interface"]
categories = ["development-tools"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]

[dependencies]
which = "4.0"
thiserror = "1.0"

[package.metadata.docs.rs]
all-features = true
